variantsMenu no longer flickers when variant selected

--- a/src/app/views/events/common/variantsMenu.less
+++ b/src/app/views/events/common/variantsMenu.less
@@ -6,6 +6,7 @@
   background-color: @pageBackground2;
   border-bottom-right-radius: @border-radius-base;
   margin-left: -@contentPadding;
+  margin-right: -@contentPadding;
 
   @media (min-width: @screen-md-min) {
     min-height: 500px !important;
